--- a/html/ui/index.html
+++ b/html/ui/index.html
@@ -1838,6 +1838,7 @@
                                             <th data-i18n="uploaded">Uploaded</th>
                                             <th data-i18n="application">Application</th>
                                             <th data-i18n="platform">Platform</th>
+                                            <th data-i18n="connectionType">Connection</th>
                                         </tr>
                                     </thead>
                                     <tbody>
